--- a/resume2.html
+++ b/resume2.html
@@ -39,6 +39,7 @@
     <nav
       id="navbar"
       class="sticky top-0 z-10 rounded bg-sky-900 px-2 py-2 dark:bg-gray-900 sm:px-4"
+      data-aos="fade-down"
     >
       <div
         class="container mx-auto flex flex-wrap items-center justify-between"
@@ -115,9 +116,9 @@
             </li>
             <li>
               <a
-                href="resume1.html"
+                href="resume2.html"
                 class="block rounded py-2 pr-4 pl-3 text-lg text-white hover:opacity-80 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white md:border-0 md:p-0 md:hover:bg-transparent md:hover:text-blue-700 md:dark:hover:bg-transparent md:dark:hover:text-white"
-                >patantiw</a
+                >tsuksamr</a
               >
             </li>
           </ul>
@@ -126,48 +127,48 @@
     </nav>
 
     <section id="home" class="flex flex-col justify-center">
-      <div id="layout" class="stars"></div>
+      <div id="layout" class="stars -z-10"></div>
       <div
         class="container flex flex-col items-center justify-center"
-        data-aos="zoom-in"
-        data-aos-delay="100"
+        data-aos="flip-left"
+        data-aos-delay="200"
       >
         <h1 class="font-sans text-6xl font-bold text-sky-800">Resume 1</h1>
         <p class="my-3 text-3xl font-semibold text-sky-700">
           Name:
-          <span class="typed" data-typed-items="Tus Suksamran"></span>
+          <span class="typed" data-typed-items="Pakorn Tantiwutthiphat"></span>
         </p>
 
         <div>
           <img
             style="border-radius: 50%"
-            class="img-fluid"
-            src="https://i.kfs.io/album/global/160289973,0v1/fit/500x500.jpg"
-            alt="Bing Chiling"
+            class="img-fluid h-96"
+            src="https://external-preview.redd.it/APNpZ0d65zQ88K2JOezle7upeGjLcj0rHy_vIXcTtaA.jpg?width=640&crop=smart&auto=webp&s=9f7faacfd7ec153e490fedc500f57f47186c6cab"
+            alt="This incident will be reported"
           />
         </div>
         <div class="social-links mt-4">
           <a
-            href="https://www.facebook.com/Tus.suksamran"
-            class="facebook"
+            href="https://www.facebook.com/prite.pakorn"
+            class="facebook m-2"
             target="_blank"
             ><i class="bx bxl-facebook text-5xl text-sky-700"></i
           ></a>
           <a
-            href="https://www.instagram.com/imilway.k/"
-            class="instagram"
+            href="https://www.instagram.com/prite_.to/"
+            class="instagram m-2"
             target="_blank"
             ><i class="bx bxl-instagram text-5xl text-sky-700"></i
           ></a>
           <a
             href="https://www.linkedin.com/in/pakorn-tantiwutthiphat-66a6b7246/"
-            class="linkedin"
+            class="linkedin m-2"
             target="_blank"
             ><i class="bx bxl-linkedin text-5xl text-sky-700"></i
           ></a>
           <a
             href="https://www.youtube.com/watch?v=OoQLoKHhohg"
-            class="discord"
+            class="discord m-2"
             target="_blank"
             ><i class="bx bxl-discord text-5xl text-sky-700"></i
           ></a>
@@ -176,58 +177,58 @@
     </section>
 
     <main id="main">
-      <section id="about" class="mt-4">
+      <section id="about" class="mt-4 xl:pt-24">
         <div class="container divide-y" data-aos="fade-up">
           <div class="section-title">
-            <h2>About</h2>
-            <p>
-              Hello, my name is Tus Suksamran, and I hope that this
+            <h2 class="mt-4 pt-4">About</h2>
+            <p class="text-lg">
+              Hello, my name is Pakorn Tantiwutthiphat, and I hope that this
               resume accurately represents my skills and career.
             </p>
           </div>
 
           <div class="flex flex-col lg:flex-row">
             <div
-              class="mt-4 lg:col-start-1 lg:col-end-3 lg:mr-10 lg:mt-4 lg:w-2/6"
+              class="mt-4 lg:col-start-1 lg:col-end-3 lg:mr-10 lg:mt-4 lg:w-2/6 lg:pt-12 xl:pt-0"
             >
               <img
-                style="border-radius: 100px"
-                src="public/img/profile-img.jpg"
+                src="public/img/6x10jc.jpg"
+                alt="Tliangso terrorized people"
               />
             </div>
-            <div class="mt-2 pt-4 lg:col-span-4 lg:col-end-7 lg:pt-0">
-              <h2 class="text-bold">High School Student</h2>
+            <div class="mt-4 pt-4 lg:col-span-4 lg:col-end-7 lg:pt-0">
+              <h2 class="text-bold text-2xl">High School Student</h2>
               <p class="text-bold mb-4 italic">
                 This is my senior year of high school, and I'm hoping to get
                 into my dream university.
               </p>
-              <div class="flex flex-col lg:flex-row">
+              <div class="flex flex-col text-xl lg:flex-row lg:pl-4">
                 <div class="lg:col-span-6">
                   <ul>
-                    <li class="mb-2 lg:mb-4">
+                    <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i>
                       <strong>Birthday:</strong> <span>XX XXX 2005</span>
                     </li>
-                    <li class="mb-2 lg:mb-4">
+                    <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i>
-                      <strong>Phone:</strong> <span>091 xxx xxxx</span>
+                      <strong>Phone:</strong> <span>064 xxx xxxx</span>
                     </li>
-                    <li class="mb-2 lg:mb-4">
+                    <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i> <strong>City:</strong>
-                      <span>Kanchanaburi, Thailand</span>
+                      <span>Samutprakarn, Thailand</span>
                     </li>
                   </ul>
                 </div>
                 <div class="lg:col-span-6 lg:ml-12">
                   <ul>
-                    <li class="mb-2 lg:mb-4">
+                    <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i> <strong>Age:</strong>
                       <span>17</span>
                     </li>
-                    <li class="mb-2 lg:mb-4">
+                    <li class="mb-4 lg:mb-4 lg:text-xl">
                       <i class="bi bi-chevron-right"></i>
                       <strong>Email:</strong>
-                      <span>tusg082@gmail.com</span>
+                      <span>pakorn.tantiwutthiphat@gmail.com</span>
                     </li>
                   </ul>
                 </div>
@@ -238,19 +239,19 @@
       </section>
 
       <section id="resume" class="resume">
-        <div class="container" data-aos="fade-up">
+        <div class="container divide-y" data-aos="fade-left">
           <div class="section-title">
             <h2>Resume</h2>
-            <p>
+            <p class="text-lg">
               This will show what I have done and what my experience looks like.
             </p>
           </div>
 
-          <div class="row">
-            <div class="col-lg-6">
+          <div class="lg:grid lg:grid-cols-2 lg:flex-row">
+            <div class="lg:col-span-1">
               <h3 class="resume-title">Summary</h3>
               <div class="resume-item pb-0">
-                <h4>Tus Suksamran</h4>
+                <h4>Pakorn Tantiwutthiphat</h4>
                 <p>
                   <em
                     >I am a 12th grade high school student who wants to design
@@ -258,36 +259,36 @@
                   >
                 </p>
                 <ul>
-                  <li>Kanchanaburi, Thailand</li>
-                  <li>091 xxx xxxx</li>
-                  <li>tus082@gmail.com</li>
+                  <li>Samutprakarn, Thailand</li>
+                  <li>064 xxx xxxx</li>
+                  <li>pakorn.tantiwutthiphat@gmail.com</li>
                 </ul>
               </div>
 
               <h3 class="resume-title">Education</h3>
               <div class="resume-item">
                 <h4>
-                 Potential Science-Mathematics
+                  Major in Science-Mathematics(Faculty of Robotics and AI)
                 </h4>
                 <h5>2020-present</h5>
                 <p>
                   <em
-                    >Visutharangsri School, Kanchanaburi, Thailand</em
+                    >Assumption College Samutprakarn, Samutprakarn, Thailand</em
                   >
                 </p>
                 <p>
-                  <!-- I wanted to write a website, but I saw this as a great
+                  I wanted to write a website, but I saw this as a great
                   opportunity, so I chose to major in Robotics and AI, but I
-                  still write and create websites on the side. -->
+                  still write and create websites on the side.
                 </p>
               </div>
             </div>
-            <div class="col-lg-6">
+            <div class="lg:col-span-1">
               <h3 class="resume-title">Professional Experience</h3>
-              <div class="resume-item">
-                <h4>Administrator Server Fivem</h4>
-                <h5>ZELIFE TOWN</h5>
-                <p><em></em></p>
+              <div class="resume-item lg:ml-2">
+                <h4>CSCamp 13</h4>
+                <h5>2021</h5>
+                <p><em>Online Learning</em></p>
                 <ul>
                   <li>Learn how to use Micro:bit</li>
                   <li>
@@ -301,9 +302,9 @@
                   </li>
                 </ul>
               </div>
-              <div class="resume-item">
-                <h4>Graphic design</h4>
-                <h5>ZELIFE TOWN</h5>
+              <div class="resume-item lg:ml-2">
+                <h4>ITCAMP 18</h4>
+                <h5>2022</h5>
                 <p><em>Onsite Learning and Activities</em></p>
                 <ul>
                   <li>Learn the basics of HTML, CSS, and Js</li>
@@ -322,21 +323,23 @@
           </div>
         </div>
         <section id="skills" class="skills section-bg">
-          <div class="container" data-aos="fade-up">
+          <div class="container divide-y" data-aos="fade-right">
             <div class="section-title">
               <h2>Skills</h2>
-              <p>This will give a rough idea of my skill level.</p>
+              <p class="text-lg ">This will give a rough idea of my skill level.</p>
             </div>
 
-            <div class="row skills-content">
-              <div class="col-lg-6">
+            <div
+              class="skills-content pt-4 flex flex-col lg:grid lg:grid-cols-2 lg:flex-row"
+            >
+              <div class="lg:col-span-1 lg:mr-2">
                 <div class="progress">
-                  <span class="skill">HTML <i class="val">85%</i></span>
+                  <span class="skill">HTML <i class="val">65%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="85"
+                      aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -344,12 +347,12 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">CSS <i class="val">75%</i></span>
+                  <span class="skill">CSS <i class="val">50%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="75"
+                      aria-valuenow="50"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -357,12 +360,24 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">JavaScript <i class="val">69%</i></span>
+                  <span class="skill">JavaScript <i class="val">60%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="69"
+                      aria-valuenow="60"
+                      aria-valuemin="0"
+                      aria-valuemax="100"
+                    ></div>
+                  </div>
+                </div>
+                <div class="progress">
+                  <span class="skill">Python <i class="val">50%</i></span>
+                  <div class="progress-bar-wrap">
+                    <div
+                      class="progress-bar"
+                      role="progressbar"
+                      aria-valuenow="50"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -370,14 +385,14 @@
                 </div>
               </div>
 
-              <div class="col-lg-6">
+              <div class="lg:col-span-1 lg:ml-2">
                 <div class="progress">
-                  <span class="skill">C <i class="val">40%</i></span>
+                  <span class="skill">C <i class="val">30%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="40"
+                      aria-valuenow="30"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -385,12 +400,12 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">Vue <i class="val">70%</i></span>
+                  <span class="skill">Vue <i class="val">60%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="70"
+                      aria-valuenow="60"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -398,12 +413,12 @@
                 </div>
 
                 <div class="progress">
-                  <span class="skill">Firebase <i class="val">65%</i></span>
+                  <span class="skill">Firebase <i class="val">55%</i></span>
                   <div class="progress-bar-wrap">
                     <div
                       class="progress-bar"
                       role="progressbar"
-                      aria-valuenow="65"
+                      aria-valuenow="55"
                       aria-valuemin="0"
                       aria-valuemax="100"
                     ></div>
@@ -415,67 +430,66 @@
         </section>
       </section>
       <section id="contact" class="contact">
-        <div class="container" data-aos="fade-up">
+        <div class="container" data-aos="fade-down">
           <div class="section-title">
             <h2>Contact</h2>
           </div>
-
-          <div class="row mt-1">
-            <div class="col-lg-4">
+          <div class="mt-2 lg:grid lg:grid-cols-3 lg:flex-row">
+            <div class="lg:col-span-1">
               <div class="info">
                 <div class="address">
                   <i class="bi bi-geo-alt"></i>
                   <h4>Location:</h4>
-                  <p>XXX, Kanchanaburi, Thailand 71000</p>
+                  <p>XXX, Samutprakarn, Thailand 10270</p>
                 </div>
 
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>tusg082@gmail.com</p>
+                  <p>pakorn.tantiwutthiphat@gmail.com</p>
                 </div>
 
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>091 xxx xxxx</p>
+                  <p>064 xxx xxxx</p>
                 </div>
               </div>
             </div>
-
-            <div class="col-lg-8 mt-lg-0 mt-5">
-              <form action="https://formspree.io/f/xrgjnday" method="POST">
-                <input
-                  type="email"
-                  name="email"
-                  class="form-control"
-                  placeholder="Email"
-                />
-                <div class="mt-3">
+              <div class="mt-4 lg:col-span-2 lg:mt-0">
+                <form action="https://formspree.io/f/xrgjnday" method="POST">
                   <input
+                    type="email"
+                    name="email"
                     class="form-control"
-                    type="subject"
-                    name="subject"
-                    placeholder="Subject"
+                    placeholder="Email"
                   />
-                </div>
-                <div class="form-group mt-3">
-                  <textarea
-                    class="form-control"
-                    name="message"
-                    rows="5"
-                    placeholder="Message"
-                    required
-                  ></textarea>
-                </div>
-                <div class="rounded-md shadow">
-                  <a
-                    href="#"
-                    class="mt-2 flex w-full items-center justify-center rounded-md border border-transparent bg-sky-700 px-8 py-3 text-base font-medium text-white hover:bg-sky-900 md:py-4 md:px-10 md:text-lg"
-                    >Send message</a
-                  >
-                </div>
-              </form>
+                  <div class="mt-3">
+                    <input
+                      class="form-control"
+                      type="subject"
+                      name="subject"
+                      placeholder="Subject"
+                    />
+                  </div>
+                  <div class="form-group mt-3">
+                    <textarea
+                      class="form-control"
+                      name="message"
+                      rows="5"
+                      placeholder="Message"
+                      required
+                    ></textarea>
+                  </div>
+                  <div class="rounded-md shadow">
+                    <a
+                      href="#"
+                      class="mt-2 flex w-full items-center justify-center rounded-md border border-transparent bg-sky-700 px-8 py-3 text-base font-medium text-white hover:bg-sky-900 md:py-4 md:px-10 md:text-lg"
+                      >Send message</a
+                    >
+                  </div>
+                </form>
+              </div>
             </div>
           </div>
         </div>
@@ -483,17 +497,21 @@
     </main>
     <footer id="footer">
       <div class="container">
-        <h3>Tus Suksamran</h3>
-        <p>Let your luck guide the CSS</p>
+        <h3>Pakorn Tantiwutthiphat</h3>
+        <p>
+          "The problem with coding CSS isn't only the skill issue, but it is
+          also the destiny that will decide your future." - Sun Tzu the art of
+          coding, 2022
+        </p>
         <div class="social-links">
           <a
-            href="https://www.facebook.com/Tus.suksamran"
+            href="https://www.facebook.com/prite.pakorn"
             class="facebook"
             target="_blank"
             ><i class="bx bxl-facebook"></i
           ></a>
           <a
-            href="https://www.instagram.com/imilway.k/"
+            href="https://www.instagram.com/prite_.to/"
             class="instagram"
             target="_blank"
             ><i class="bx bxl-instagram"></i
