--- a/resume2.html
+++ b/resume2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>First Resume</title>
+    <title>Secon Resume</title>
     <meta content="" name="description" />
     <meta content="" name="keywords" />
     <link href="public/img/favicon.png" rel="icon" />
@@ -78,12 +78,12 @@
             <h1 class="font-sans text-6xl font-bold text-sky-800">Resume 1</h1>
             <p class="my-3 text-3xl font-semibold text-sky-700">
                 Name:
-                <span class="typed" data-typed-items="Pakorn Tantiwutthiphat"></span>
+                <span class="typed" data-typed-items="Tus Suksamran"></span>
             </p>
 
             <div>
                 <img style="border-radius: 50%" class="img-fluid h-96"
-                    src="https://external-preview.redd.it/APNpZ0d65zQ88K2JOezle7upeGjLcj0rHy_vIXcTtaA.jpg?width=640&crop=smart&auto=webp&s=9f7faacfd7ec153e490fedc500f57f47186c6cab"
+                    src="https://i.pinimg.com/736x/56/c5/6d/56c56dd4343e635ae3d99735ef4f1645.jpg"
                     alt="This incident will be reported" />
             </div>
             <div class="social-links mt-4">
@@ -112,14 +112,10 @@
 
                 <div class="flex flex-col lg:flex-row">
                     <div class="mt-4 lg:col-start-1 lg:col-end-3 lg:mr-10 lg:mt-4 lg:w-2/6 lg:pt-12 xl:pt-0">
-                        <img src="public/img/6x10jc.jpg" alt="Tliangso terrorized people" />
+                        <img src="public/img/tliangso.png" alt="Tliangso terrorized people" />
                     </div>
                     <div class="mt-4 pt-4 lg:col-span-4 lg:col-end-7 lg:pt-0">
                         <h2 class="text-bold text-2xl">High School Student</h2>
-                        <p class="text-bold mb-4 italic">
-                            This is my senior year of high school, and I'm hoping to get
-                            into my dream university.
-                        </p>
                         <div class="flex flex-col text-xl lg:flex-row lg:pl-4">
                             <div class="lg:col-span-6">
                                 <ul>
@@ -170,10 +166,6 @@
                         <h3 class="resume-title">Summary</h3>
                         <div class="resume-item pb-0">
                             <h4>Tus Suksamran</h4>
-                            <p>
-                                <em>I am a 12th grade high school student who wants to design
-                                    and build a fantastic website.</em>
-                            </p>
                             <ul>
                                 <li>Tus Suksamran</li>
                                 <li>091 xxx xxxx</li>
@@ -184,55 +176,31 @@
                         <h3 class="resume-title">Education</h3>
                         <div class="resume-item">
                             <h4>
-                                Major in Science-Mathematics(Faculty of Robotics and AI)
+                                Potential science-mathematics
                             </h4>
-                            <h5>2020-present</h5>
+                            <h5>2019-2022</h5>
                             <p>
-                                <em>Assumption College Samutprakarn, Samutprakarn, Thailand</em>
+                                <em>Visuthasangsri Shcool, Kanchanaburi, Thailand</em>
                             </p>
                             <p>
-                                I wanted to write a website, but I saw this as a great
-                                opportunity, so I chose to major in Robotics and AI, but I
-                                still write and create websites on the side.
                             </p>
                         </div>
                     </div>
                     <div class="lg:col-span-1">
                         <h3 class="resume-title">Professional Experience</h3>
                         <div class="resume-item lg:ml-2">
-                            <h4>CSCamp 13</h4>
-                            <h5>2021</h5>
-                            <p><em>Online Learning</em></p>
+                            <h4>Mahidol potential Sci camp</h4>
+                            <h5>2019</h5>
                             <ul>
-                                <li>Learn how to use Micro:bit</li>
                                 <li>
-                                    Learn the basics of coding by making a code using block
-                                    codes
+                                    Learn the basics of Anatomy and Chemical element in human body.
                                 </li>
                                 <li>
-                                    The final day project makes me use the knowledge that I have
-                                    learned and combine it to help with the health aspect of
-                                    human beings.
+                                    
                                 </li>
                             </ul>
                         </div>
-                        <div class="resume-item lg:ml-2">
-                            <h4>ITCAMP 18</h4>
-                            <h5>2022</h5>
-                            <p><em>Onsite Learning and Activities</em></p>
-                            <ul>
-                                <li>Learn the basics of HTML, CSS, and Js</li>
-                                <li>Be introduced to Vue, Vuetify, Firebase, Node.js</li>
-                                <li>
-                                    Final Project makes extensive use of database management and
-                                    outside-of-class knowledge
-                                </li>
-                                <li>
-                                    The final project of the camp provides the opportunity to
-                                    present in the auditorium
-                                </li>
-                            </ul>
-                        </div>
+                        
                     </div>
                 </div>
             </div>
@@ -246,9 +214,9 @@
                     <div class="skills-content pt-4 flex flex-col lg:grid lg:grid-cols-2 lg:flex-row">
                         <div class="lg:col-span-1 lg:mr-2">
                             <div class="progress">
-                                <span class="skill">HTML <i class="val">65%</i></span>
+                                <span class="skill">HTML <i class="val">50%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100"></div>
                                 </div>
                             </div>
@@ -262,14 +230,14 @@
                             </div>
 
                             <div class="progress">
-                                <span class="skill">JavaScript <i class="val">60%</i></span>
+                                <span class="skill">JavaScript <i class="val">50%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="progress">
-                                <span class="skill">Python <i class="val">50%</i></span>
+                                <span class="skill">ReactJS <i class="val">50%</i></span>
                                 <div class="progress-bar-wrap">
                                     <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100"></div>
@@ -279,25 +247,32 @@
 
                         <div class="lg:col-span-1 lg:ml-2">
                             <div class="progress">
-                                <span class="skill">C <i class="val">30%</i></span>
+                                <span class="skill">C<i class="val">50%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
+                                        aria-valuemax="100"></div>
+                                </div>
+                            </div>
+                            <div class="progress">
+                                <span class="skill">C++<i class="val">50%</i></span>
+                                <div class="progress-bar-wrap">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100"></div>
                                 </div>
                             </div>
 
                             <div class="progress">
-                                <span class="skill">Vue <i class="val">60%</i></span>
+                                <span class="skill">C#<i class="val">50%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0"
                                         aria-valuemax="100"></div>
                                 </div>
                             </div>
 
                             <div class="progress">
-                                <span class="skill">Firebase <i class="val">55%</i></span>
+                                <span class="skill">Mysql<i class="val">40%</i></span>
                                 <div class="progress-bar-wrap">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0"
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0"
                                         aria-valuemax="100"></div>
                                 </div>
                             </div>
@@ -359,9 +334,7 @@
         <div class="container">
             <h3>Tus Suksamran</h3>
             <p>
-                "The problem with coding CSS isn't only the skill issue, but it is
-                also the destiny that will decide your future." - Sun Tzu the art of
-                coding, 2022
+                "Let your luck guide the CSS"
             </p>
             <div class="social-links">
                 <a href="https://www.facebook.com/Tus.suksamran" class="facebook" target="_blank"><i
